// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > should accept a custom role for the SVG component 1`] = `
<svg
  class="duk-icon"
  role="presentation"
  viewBox="0 0 24 24"
>
  <path
    d="M3,3H21V21H3V3M5,5V19H19V5H5Z"
  />
</svg>
`;

exports[`Icon > should pass additional class names to the rendered element 1`] = `
<svg
  class="duk-icon foo bar"
  role="graphics-symbol"
  viewBox="0 0 24 24"
>
  <path
    d="M3,3H21V21H3V3M5,5V19H19V5H5Z"
  />
</svg>
`;

exports[`Icon > should render the Icon component 1`] = `
<svg
  class="duk-icon"
  role="graphics-symbol"
  viewBox="0 0 24 24"
>
  <path
    d="M3,3H21V21H3V3M5,5V19H19V5H5Z"
  />
</svg>
`;

exports[`Icon > should render the icon inside a \`g\` element if it's part of a stack 1`] = `
<g
  class="duk-icon"
>
  <rect />
  <path
    d="M3,3H21V21H3V3M5,5V19H19V5H5Z"
  />
</g>
`;
